Align with latest Spring Boot 1.3 snapshots

--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -190,6 +190,9 @@ replacements.
 | `com.codahale.metrics:metrics-servlets`
 | `io.dropwizard.metrics:metrics-servlets`
 
+| `com.lambdaworks:lettuce`
+| `biz.paluch.redis:lettuce`
+
 | `net.java.dev.rome:rome`
 | `com.rometools:rome`
 
