Upgrade to Reactor 2.0.5.RELEASE
This commit updates the Platform to use Reactor 2.0.5.RELEASE. This
Reactor release supports Kryo 3.0.x which is also used by the latest
Spring Integration 4.2 snapshots. The dependency management for Kryo
and Spring Integration has been updated accordingly.

Closes gh-229

--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -190,6 +190,9 @@ replacements.
 | `com.codahale.metrics:metrics-servlets`
 | `io.dropwizard.metrics:metrics-servlets`
 
+| `com.esotericsoftware.kryo:kryo`
+| `com.esotericsoftware:kryo`
+
 | `com.lambdaworks:lettuce`
 | `biz.paluch.redis:lettuce`
 
