Align with latest Spring Boot 1.3.0 snapshots

--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -47,6 +47,9 @@ part of the upgrade process.
 | `com.thoughtworks.qdox`
 | No longer a dependency of any of the Platform's projects
 
+| `commons-beanutils:commons-beanutils-core`
+| No longer a dependency of any of the Platform's projects
+
 | `org.apache.ant:ant`
 | No longer a dependency of any of the Platform's projects
 
