--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -7,216 +7,9 @@ This section provides all you need to know about upgrading to this version of Sp
 Platform.
 --
 
-
-
-[[upgrading-gradle]]
-== Gradle
-
-
-
-=== platform-versions artifact
-
-The `platform-versions` properties artifact has been removed. If you are using the
-Platform with Gradle, then you must start using the dependency management plugin and the
-Platform's bom instead. See <<getting-started-using-spring-io-platform-gradle>> for more
-information.
-
-[[upgrading-dependency-management]]
-== Changes to dependency management
-
-[[upgrading-dependency-management-removed]]
-=== Dependency management that has been removed
-
-The following table lists dependency management that has been removed. If you project
-uses one of these dependencies, you should configure your own dependency management as
-part of the upgrade process.
-
-|===
-|Dependency | Explanation
-
-| `bsf:bsf`
-| No longer a dependency of any of the Platform's projects
-
-| `com.beust:jcommander`
-| No longer a dependency of any of the Platform's projects
-
-| `com.lmax:disruptor`
-| Reactor was the sole user of this dependency. It now embeds a repackaged version of the
-  library so the dependency is no longer required
-
-| `com.thoughtworks.qdox`
-| No longer a dependency of any of the Platform's projects
-
-| `commons-beanutils:commons-beanutils-core`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.ant:ant`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.ant:ant-antlr`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.ant:ant-junit`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.ant:ant-launcher`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.cassandra:cassandra-all`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.ivy:ivy`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-common`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-distcp`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-hdfs`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-mapreduce-client-app`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-mapreduce-client-core`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-mapreduce-client-hs`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-mapreduce-client-jobclient`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-streaming`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-yarn-client`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-yarn-common`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hadoop:hadoop-yarn-server-tests`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hbase:hbase`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hbase:hbase-client`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hbase:hbase-common`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.hive:hive-service`
-| No longer a dependency of any of the Platform's projects
-
-| `org.apache.pig:pig`
-| No longer a dependency of any of the Platform's projects
-
-| `org.codehaus.gpars:gpars`
-| No longer a dependency of any of the Platform's projects
-
-| `org.erlang.otp:jinterface`
-| No longer a dependency of any of the Platform's projects
-
-| `org.fusesource.jansi:jansi`
-| No longer a dependency of any of the Platform's projects
-
-| `org.glassfish.tyrus:tyrus-websocket-core`
-| Does not exist in the version of Tyrus that is now used by the Platform.
-
-| `org.grails:grails-dependencies`
-| Grails is no longer part of the Platform
-
-| `org.igniterealtime.smack:smackx`
-| Does not exist in the version of Smack that is now used by the Platform
-
-| `org.kitesdk:kite-data-core`
-| No longer a dependency of any of the Platform's projects
-
-| `org.neo4j:neo4j-graph-collections`
-| No longer a dependency of any of the Platform's projects
-
-| `org.springframework.amqp:spring-erlang`
-| Does not exist in the verison of Spring AMQP that is now used by the Platform
-
-| `org.springframework.data:spring-data-hadoop`
-
-`org.springframework.data:spring-data-hadoop-batch`
-
-`org.springframework.data:spring-data-hadoop-core`
-
-`org.springframework.data:spring-data-hadoop-store`
-
-`org.springframework.data:spring-data-hadoop-test`
-
-`org.springframework.data:spring-yarn-batch`
-
-`org.springframework.data:spring-yarn-boot`
-
-`org.springframework.data:spring-yarn-core`
-
-`org.springframework.data:spring-yarn-integration`
-
-`org.springframework.data:spring-yarn-test`
-
-| The wide variety of dependencies used by the different Apache Hadoop distributions
-  supported by Spring for Apache Hadoop has made it impossible to provide generally useful
-  dependency management for the project and its dependencies. As a result, Spring for
-  Apache Hadoop has been removed from the Platform.
-|===
-
-
-
-[[upgrading-dependency-management-replaced]]
-=== Dependency management that has been replaced
-
-The following table lists dependency management that has been replaced. Where possible,
-as part of the upgrade process, you should update your project's dependencies to use the
-replacements.
-
-|===
-| Dependency | Replacement
-
-| `com.codahale.metrics:metrics-core`
-| `io.dropwizard.metrics:metrics-core`
-
-| `com.codahale.metrics:metrics-ganglia`
-| `io.dropwizard.metrics:metrics-ganglia`
-
-| `com.codahale.metrics:metrics-graphite`
-| `io.dropwizard.metrics:metrics-graphite`
-
-| `com.codahale.metrics:metrics-servlets`
-| `io.dropwizard.metrics:metrics-servlets`
-
-| `com.esotericsoftware.kryo:kryo`
-| `com.esotericsoftware:kryo`
-
-| `com.lambdaworks:lettuce`
-| `biz.paluch.redis:lettuce`
-
-| `javax.ws.rs:jsr311-api`
-| `javax.ws.rs:javax.ws.rs-api`
-
-| `net.java.dev.rome:rome`
-| `com.rometools:rome`
-
-| `net.java.dev.rome:rome-fetcher`
-| `com.rometools:rome-fetcher`
-
-| `org.apache.directory.server:apacheds-all`
-| Separate, more finely grained `org.apache.directory.server` modules
-
-| `org.apache.tomcat:tomcat7-websocket`
-| `org.apache.tomcat:tomcat-websocket`
-
-| `org.eclipse.paho:mqtt-client`
-| `org.eclipse.paho:org.eclipse.paho.client.mqttv3`
-
-| `org.hibernate.javax.persistence:hibernate-jpa-2.0-api`
-| `org.eclipse.persistence:javax.persistence`
-|===
+[[upgrading-overview]]
+== Overview
+If you are upgrading from Spring IO Platform 2.0, there are no changes in this version
+that are known to affect the upgrade process. If you are upgrading from an earlier version
+of the Platform, please refer to the {platform-docs-20x}/htmlsingle/#upgrading[upgrade
+section of the 2.0.x documentation].
