--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -7,9 +7,21 @@ This section provides all you need to know about upgrading to this version of Sp
 Platform.
 --
 
-[[upgrading-overview]]
-== Overview
-If you are upgrading from Spring IO Platform 2.0, there are no changes in this version
-that are known to affect the upgrade process. If you are upgrading from an earlier version
-of the Platform, please refer to the {platform-docs-20x}/htmlsingle/#upgrading[upgrade
-section of the 2.0.x documentation].
+[[upgrading-dependency-management]]
+== Changes to dependency management
+
+[[upgrading-dependency-management-removed]]
+=== Dependency management that has been removed
+
+The following table lists dependency management that has been removed. If you project
+uses one of these dependencies, you should configure your own dependency management as
+part of the upgrade process.
+
+|===
+|Dependency | Explanation
+
+| `org.neo4j:neo4j-ogm-api`
+| No longer a dependency of any of the Platform's projects
+
+| `com.github.fge:json-patch`
+| No longer a dependency of any of the Platform's projects
