--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -24,6 +24,9 @@ part of the upgrade process.
 |===
 |Dependency | Explanation
 
+| `org.igniterealtime.smack:smack`
+| No longer a dependency of any of the Platform's projects
+
 | `org.neo4j:neo4j-ogm-api`
 | No longer a dependency of any of the Platform's projects
 
