--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -32,6 +32,9 @@ part of the upgrade process.
 
 | `com.github.fge:json-patch`
 | No longer a dependency of any of the Platform's projects
+
+| `javax.xml.soap:saaj-api`
+| No longer a dependency of any of the Platform's projects
 |===
 
 
