--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -24,17 +24,23 @@ part of the upgrade process.
 |===
 |Dependency | Explanation
 
+| `com.fasterxml.jackson:jackson-datatype-jdk7`
+| As of Jackson 2.7, functionality is provided by `com.fasterxml.jackson:jackson-databind`
+
+| `org.apache.zookeeper:zookeeper`
+| No longer a direct dependency of any of the Platform's projects
+
 | `org.igniterealtime.smack:smack`
-| No longer a dependency of any of the Platform's projects
+| No longer a direct dependency of any of the Platform's projects
 
 | `org.neo4j:neo4j-ogm-api`
-| No longer a dependency of any of the Platform's projects
+| No longer a direct dependency of any of the Platform's projects
 
 | `com.github.fge:json-patch`
-| No longer a dependency of any of the Platform's projects
+| No longer a direct dependency of any of the Platform's projects
 
 | `javax.xml.soap:saaj-api`
-| No longer a dependency of any of the Platform's projects
+| No longer a direct dependency of any of the Platform's projects
 |===
 
 
