--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -24,6 +24,9 @@ part of the upgrade process.
 |===
 |Dependency | Explanation
 
+| `com.google.code.findbugs:annotations`
+| No longer a direct dependency of any of the Platform's projects
+
 | `com.fasterxml.jackson:jackson-datatype-jdk7`
 | As of Jackson 2.7, functionality is provided by `com.fasterxml.jackson:jackson-databind`
 
