Upgrade to ejb-api 3.2
Closes gh-411

--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -57,4 +57,7 @@ replacements.
 
 | `com.mysema.querydsl:querydsl-apt`
 | `com.querydsl:querydsl-apt`
+
+| `javax.ejb:ejb-api`
+| `javax.ejb:javax.ejb-api`
 |===
